--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ div.card1, div.card2 {display: inline-block;}
 }
 
 .solitairePile {
-  
+
   background-image: url("../images/card-images/2C.png");
   background-size: cover;
 }
@@ -58,6 +58,10 @@ div.card1, div.card2 {display: inline-block;}
   height: 110px;
 
 
+}
+
+.cardPile {
+  position: absolute;
 }
 
 /* .droparea:-moz-drag-over {
