--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 img {
   height: 110px;
   width: 72px;
+  /* margin-bottom: 20px; */
 }
 
 div.card1, div.card2 {display: inline-block;}
@@ -16,7 +17,7 @@ div.card1, div.card2 {display: inline-block;}
 
 .container {
   background-color: white;
-  height: 900px;
+  height: 910px;
   width: 800px;
   margin: auto;
   margin-top: 100px;
@@ -46,15 +47,14 @@ div.card1, div.card2 {display: inline-block;}
   background-size: cover;
 }
 .card1 {
-
-  background-color: red;
+  border: red 2px solid;
   height: 110px;
 
 
 }
 
 .card2 {
-  background-color: blue;
+  border: blue 2px solid;
   height: 110px;
 
 
